--- a/Quiz_Data_Mining_11181049.ipynb
+++ b/Quiz_Data_Mining_11181049.ipynb
@@ -5,7 +5,9 @@
     "colab": {
       "name": "Quiz Data Mining_11181049.ipynb",
       "provenance": [],
-      "collapsed_sections": []
+      "collapsed_sections": [],
+      "toc_visible": true,
+      "include_colab_link": true
     },
     "kernelspec": {
       "name": "python3",
@@ -16,6 +18,16 @@
     }
   },
   "cells": [
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/MZIR25/-11181049-_-Ikraam-_DM_IF-ITK/blob/main/Quiz_Data_Mining_11181049.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
     {
       "cell_type": "markdown",
       "metadata": {
@@ -38,7 +50,7 @@
         "from google.colab import drive\n",
         "drive.mount('/content/gdrive')"
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -61,7 +73,7 @@
       "source": [
         "cd /content/gdrive/MyDrive/DM/"
       ],
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -91,7 +103,7 @@
         "import pandas as pd\n",
         "import matplotlib.pyplot as plt"
       ],
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -117,7 +129,7 @@
         "iris = pd.read_csv('IRIS.csv')\n",
         "iris.head()"
       ],
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -219,7 +231,7 @@
       "source": [
         "iris.info()"
       ],
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -254,7 +266,7 @@
       "source": [
         "iris.describe()"
       ],
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -376,7 +388,7 @@
         "plt.figure(figsize=(9,7));\n",
         "sns.scatterplot(x=iris.sepal_length, y=iris.sepal_width, hue=iris.species).set_title(\"Dist. panjang & lebar kelopak bunga\")"
       ],
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -429,7 +441,7 @@
         "iris['species'] = label_encoding.fit_transform(iris['species'])\n",
         "iris.sample(4)"
       ],
-      "execution_count": 30,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -522,7 +534,7 @@
         "X = iris.drop('species',axis=1)\n",
         "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.4, random_state=0)"
       ],
-      "execution_count": 31,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -547,7 +559,7 @@
       "source": [
         "X.sample(4)"
       ],
-      "execution_count": 32,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -647,7 +659,7 @@
         "naive_bayes_model = GaussianNB()\n",
         "naive_bayes_model.fit(X_train, y_train)"
       ],
-      "execution_count": 43,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -669,7 +681,7 @@
       "source": [
         "y_predict = naive_bayes_model.predict(X_test)"
       ],
-      "execution_count": 44,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -687,7 +699,7 @@
         "\n",
         "print('Akurasi Naive Bayes: ' + \"{:.1%}\".format(accuracy_score(y_predict, y_test)))"
       ],
-      "execution_count": 35,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -730,7 +742,7 @@
         "from sklearn.metrics import classification_report\n",
         "from sklearn.model_selection import train_test_split"
       ],
-      "execution_count": 37,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -756,7 +768,7 @@
         "from sklearn.metrics import accuracy_score\n",
         "print('Akurasi SVM: ' + \"{:.1%}\".format(accuracy_score(y_predict, y_test)))"
       ],
-      "execution_count": 46,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
